tests/fixtures/compile_errors/return_from_init.fe
contract C:
    pub def __init__() -> i32:
        return 0
